[package]
name = "cocktailfyi"
version = "0.1.1"
edition = "2021"
authors = ["FYIPedia"]
description = "Cocktail recipes, ABV calculation, calorie estimation, and flavor profiling — async API client for cocktailfyi.com."
license = "MIT"
repository = "https://github.com/fyipedia/cocktailfyi-rs"
homepage = "https://cocktailfyi.com"
documentation = "https://docs.rs/cocktailfyi"
readme = "README.md"
keywords = ["cocktail", "recipe", "abv", "mixology", "bartending"]
categories = ["api-bindings", "data-structures"]

exclude = ["target/", "demo.gif", "demo.tape"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
